integration-tests/tests/integration/snapshots/integration__banned_group_in_default_filter.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
---
  error: predicate not allowed in `default-filter` expressions
   ╭────
 1 │ group(serial)
   ·       ───┬──
   ·          ╰── group() is not available in default-filter expressions
   ╰────

error: failed to parse filterset
