integration-tests/tests/integration/snapshots/integration__banned_test_in_archive_filter.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
---
  error: predicate not allowed in `archive-filter` expressions
   ╭────
 1 │ test(foo)
   ·      ─┬─
   ·       ╰── test() predicates are not supported while archiving
   ╰────

error: failed to parse filterset
