integration-tests/tests/integration/snapshots/integration__rustc_vv_invalid_stdout_warning.snap
---
source: integration-tests/tests/integration/main.rs
expression: command.unchecked(true).output().to_snapshot()
---
exit status|code: Some(0)
--- stdout ---
host triple: x86_64-unknown-linux-gnu
target triple: (none)


--- stderr ---
warning: for host platform, parsing `rustc -vV` failed; falling back to build target `x86_64-unknown-linux-gnu`
- host platform error:
  error parsing `rustc -vV` output
    caused by:
    - output from `rustc -vV` did not contain a `host: ` line; output:
      ---
      invalid output to stdout
      ---
