integration-tests/tests/integration/snapshots/integration__rustc_vv_non_zero.snap
---
source: integration-tests/tests/integration/main.rs
expression: command.unchecked(true).output().to_snapshot()
---
exit status|code: Some(96)
--- stdout ---


--- stderr ---
error: the host platform could not be detected

Caused by:
  `rustc -vV` failed with exit status|code: 1, and detecting the build target failed as well
  - `rustc -vV` stdout:
    failure output to stdout

  - `rustc -vV` stderr:
    failure output to stderr

  - build target error:
    error parsing `rustc -vV` output
      caused by:
      - output from `rustc -vV` did not contain a `host: ` line; output:
        ---
        (__NEXTEST_FORCE_BUILD_TARGET set to "error", forcibly failing build target detection)
        ---
